--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SplashActivity" />
+        <activity android:name=".activities.SplashActivity"></activity>
+        <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.RegistryActivity" />
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.EditTextActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
