--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.SettingsActivity"
-            android:parentActivityName=".activities.MainActivity" />
+            android:name=".activities.SettingsActivity"/>
+<!--            android:parentActivityName=".activities.MainActivity" />-->
         <activity
-            android:name=".activities.EditTextActivity"
-            android:parentActivityName=".activities.MainActivity" />
-        <activity android:name=".activities.MainActivity" />
+            android:name=".activities.EditTextActivity"/>
+<!--            android:parentActivityName=".activities.MainActivity" />-->
+        <activity android:name=".activities.SplashActivity" />
         <activity android:name=".activities.RegistryActivity" />
-        <activity android:name=".activities.SplashActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
