Ocultar contenido de la nota Eliminar y actualizar nota

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
             android:name=".activities.EditTextActivity"
             android:parentActivityName=".activities.MainActivity" />
         <activity android:name=".activities.RegistryActivity" />
-        <activity android:name=".activities.SplashActivity" />
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
